Make the mousemove event cancellable

The mouse move event used to be non cancellable in the 90s and
when the specications changes in 2002-2003, not not everyone noticed. 

Specification:
http://www.w3.org/TR/DOM-Level-3-Events/#event-type-mousemove

Already implemented by MSIE and Opera (Presto). 
Still an open (and forgotten?) bug in Mozilla: https://bugzilla.mozilla.org/show_bug.cgi?id=704423

BUG=261449

Review URL: https://chromiumcodereview.appspot.com/23463012

git-svn-id: svn://svn.chromium.org/blink/trunk@157207 bbb929c8-8fbe-4397-9dbb-9b2b20218538

Former-commit-id: 7d3e30bcb25f15ad816c0a864bd4fa2afb2cfbc8